@@ -1,21 +1,21 @@
-0cd9e494d0146682180186f3d3e2752f *DESCRIPTION
-87a89086a2d7d36513a827338f2168bb *NAMESPACE
-d62b54718c76c36e0137c30f94776032 *NEWS
+6c409ef8e37e0936e6df3ac8931940ff *DESCRIPTION
+0138c297e1c17cef31fd4275e5d2058f *NAMESPACE
+8bebd8e5cef0eaa470d5a86387286b08 *NEWS
 0a375621b5466aaa55827331b7a54aba *R/markdown-package.R
-7510df407f186198a04e2d4243009501 *R/renderMarkdown.R
+4c0c2582a89ace3512ccd0b7d077e6d1 *R/renderMarkdown.R
 9c15b355037cc2e11df80d660e0e6e3f *R/rpubsUpload.R
 8d8e54509fc3fe29397a945c23015784 *README.md
-115567331f54fe741fd207d8d663b225 *build/vignette.rds
+a4565ca643b20915c2c92c21f6f674e9 *build/vignette.rds
 603dd5a44125bb3c7f2595c87c048d93 *inst/COPYING
 4907458964894cb1dcc67c4f5690a48b *inst/NOTICE
-d19002ff021174b03774124e1caab922 *inst/doc/markdown-examples.R
+5f8881b49f2c520da450f8705916e906 *inst/doc/markdown-examples.R
 29668370a07ca593fad4e953674716cc *inst/doc/markdown-examples.Rmd
-034d54e06672b954ccb840b33530225d *inst/doc/markdown-examples.html
-84ca06dc7b054c074c8bdc795edb4c50 *inst/doc/markdown-output.R
+f056c2f77c81043d19e3ccd603311576 *inst/doc/markdown-examples.html
+e850a3b8329628f9290591680017e8ad *inst/doc/markdown-output.R
 09998ddcbdaa092c32cfedd3d12e11a2 *inst/doc/markdown-output.Rmd
-245ad862444209de04c5efa2f5cf57ba *inst/doc/markdown-output.html
+7df763793845ad59bb79246d00bea681 *inst/doc/markdown-output.html
 97a8de7bcac5a0cfd539d80c098f91a3 *inst/examples/HTMLOptions.R
-2c5fc44b771406c4fb7e658e14e63fd7 *inst/examples/markdownExtensions.R
+fc33aa286a619e7be798b864d8e4e0ac *inst/examples/markdownExtensions.R
 4ba2610d0919031a909bf50306bfc533 *inst/include/autolink.h
 510d81c5e25bd88608f06afea594adfa *inst/include/buffer.h
 23ed959ea9845e0877d824fdd081b11a *inst/include/markdown.h
@@ -23,20 +23,20 @@ d19002ff021174b03774124e1caab922 *inst/doc/markdown-examples.R
 8edae02d2442e7abc13b9118a16c70c7 *inst/include/markdown_rstubs.h
 ab9c98860a3e321c58fcb1d75f9f45ba *inst/resources/markdown.css
 5ffdc57da02ee2c6a28e4b2d6053c7ac *inst/resources/markdown.html
-fdca9d153655c457b619641baf36e1d2 *inst/resources/mathjax.html
+df7f3ca066d8f72ff1f72d4906280030 *inst/resources/mathjax.html
 e25f1ac72fe309c072cd9aa836c631a6 *inst/resources/r_highlight.html
-26cfcdb2d6672ec701d2e9db10650420 *man/markdown.Rd
-5caf4643417847ca6e9b3f93f0c9cb24 *man/markdownExtensions.Rd
-6e8e61097e6512b33fd527a4dd21903e *man/markdownHTMLOptions.Rd
-78039f08f06e5be8e59ad0777758a0ff *man/markdownToHTML.Rd
-cbb80c76ae0720b203c2a06fba601f2f *man/registeredRenderers.Rd
-a45229de0c3edcdfd229e0d988f2a19a *man/renderMarkdown.Rd
-4ea2893c1dd831e40f94ce5d499cf483 *man/rendererExists.Rd
-d813f4003d03ce19439d6dc341a4ac27 *man/rendererOutputType.Rd
-f7256ce76d880ad4f4cbc5743e89cd2f *man/rpubsUpload.Rd
-807692d87b33cf8b7e4810467373fbe0 *man/smartypants.Rd
-607ed1ee44e4be0c9a35af6c1686e11f *src/Rbase64.c
-e964593e6d13af14ecadea3fe3a7742b *src/Rinit.c
+033c64ff011f088f0bc28d4e250dabaf *man/markdown.Rd
+ab14ba32c922022de7befc1f9f7d4efe *man/markdownExtensions.Rd
+b8bba863334d0c0224fb75813f6ab3c6 *man/markdownHTMLOptions.Rd
+152b64499b20d7429ebd9038c4bcf0ef *man/markdownToHTML.Rd
+ce150e104348b5d753fea95d11a1aa04 *man/registeredRenderers.Rd
+349886947c404ea6b5a9c74acac46de5 *man/renderMarkdown.Rd
+2ffe48c7a8aa9e7cea56c7724711b840 *man/rendererExists.Rd
+ab2f9d2a23a7d8a18310d813c2411657 *man/rendererOutputType.Rd
+ed3baf556e92dd865ac36deb217cebe5 *man/rpubsUpload.Rd
+f171794e13c464eefc8cff95e088ee80 *man/smartypants.Rd
+5b8ccd8ec39ce84c2cdcf97ea96a575d *src/Rbase64.c
+6ef3854b1cc4f5b7122638960ffe8591 *src/Rinit.c
 2ea7823363be5db032986e8bb22d2f73 *src/Rmarkdown.c
 be6889a7e0acbbc26cebd8b379efae40 *src/Rmarkdown.h
 26fcef5aabe22c64142adb48c2a87cf5 *src/autolink.c
@@ -55,7 +55,9 @@ d7c1cac650658c15073aeeecf8117cac *src/markdown.c
 0ac4251d8cb2f229de24efbe501f2a4a *src/stack.c
 cd51442c3d728d42342e57467dcd5ad5 *src/stack.h
 ecd33756b1689d8da494c69bea7a7ca6 *src/sundown_version.h
+db1aa5d45dbadf89ef24ddec5b4f35ff *tests/b64EncodeFile.R
+1f82a1dc0ed1faf6cfe247d37ad78638 *tests/empty.R
 44ebcfa56c4b699099a0b74fd32474f7 *tests/tests.R
-580cc623b08345531382a3a521f8eb38 *tests/tests.Rout.save
+7f1dec0d46dcf4e910dc1b0d3f8119ca *tests/tests.Rout.save
 29668370a07ca593fad4e953674716cc *vignettes/markdown-examples.Rmd
 09998ddcbdaa092c32cfedd3d12e11a2 *vignettes/markdown-output.Rmd
