@@ -1,3 +1,5 @@
+# Generated by roxygen2: do not edit by hand
+
 export(markdownExtensions)
 export(markdownHTMLOptions)
 export(markdownToHTML)
@@ -7,4 +9,5 @@ export(rendererExists)
 export(rendererOutputType)
 export(rpubsUpload)
 export(smartypants)
+importFrom(utils,URLdecode)
 useDynLib(markdown, .registration = TRUE)
