@@ -1,3 +1,4 @@
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/markdown-package.R
 \docType{package}
 \name{markdown}
@@ -22,12 +23,12 @@ To learn more about markdown syntax see:
 
 \url{http://en.wikipedia.org/wiki/Markdown}
 }
+\seealso{
+\code{\link{markdownToHTML}} \code{\link{renderMarkdown}}
+}
 \author{
 JJ Allaire, Jeffrey Horner, Vicent Marti, and Natacha Porte
 
   Maintainer: Yihui Xie <xie@yihui.name>
-}
-\seealso{
-\code{\link{markdownToHTML}} \code{\link{renderMarkdown}}
 }
 \keyword{package}
