@@ -1,3 +1,4 @@
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/renderMarkdown.R
 \name{markdownExtensions}
 \alias{markdownExtensions}
@@ -69,6 +70,7 @@ options(markdown.extensions = markdownExtensions())
 
 # To turn off all markdown extensions globally:
 options(markdown.extensions = NULL)
+
 # The following examples are short, so we set the HTML option 'fragment_only'
 
 options(markdown.HTML.options = "fragment_only")
@@ -83,7 +85,8 @@ cat(markdownToHTML(text = "
     ------------- | -------------
     Content Cell  | Content Cell
     Content Cell  | Content Cell
-", extensions = c()))
+", 
+    extensions = c()))
 
 # but not here
 cat(markdownToHTML(text = "
@@ -91,26 +94,29 @@ First Header  | Second Header
 ------------- | -------------
 Content Cell  | Content Cell
 Content Cell  | Content Cell
-", extensions = c("tables")))
+", 
+    extensions = c("tables")))
 
 # fenced_code example (need at least three leading ~ or `)
 fenced_block <- function(text, x = "`", n = 3) {
-  fence <- paste(rep(x, n), collapse = "")
-  paste(fence, text, fence, sep = "")
+    fence <- paste(rep(x, n), collapse = "")
+    paste(fence, text, fence, sep = "")
 }
 cat(markdownToHTML(text = fenced_block("
 preformatted text here without having to indent
 first line.
-"), extensions = c()))
+"), 
+    extensions = c()))
 
 cat(markdownToHTML(text = fenced_block("
 preformatted text here without having to indent
 first line.
-"), extensions = c("fenced_code")))
+"), 
+    extensions = c("fenced_code")))
 
 # autolink example
-cat(markdownToHTML(text = "http://www.r-project.org/", extensions = c()))
-cat(markdownToHTML(text = "http://www.r-project.org/", extensions = c("autolink")))
+cat(markdownToHTML(text = "https://www.r-project.org/", extensions = c()))
+cat(markdownToHTML(text = "https://www.r-project.org/", extensions = c("autolink")))
 
 # strikethrough example
 cat(markdownToHTML(text = "~~awesome~~", extensions = c()))
@@ -121,18 +127,20 @@ cat(markdownToHTML(text = "
 Embedding html without surrounding with empty newline.
 <div>_markdown_</div>
 extra text.
-", extensions = c("")))
+", 
+    extensions = c("")))
 cat(markdownToHTML(text = "
 Embedding html without surrounding with empty newline.
 <div>_markdown_</div>
 extra text.
-", extensions = c("lax_spacing")))
+", 
+    extensions = c("lax_spacing")))
 
 # space_headers example
-cat(markdownToHTML(text = "#A Header\\neven though there is no space between # and A",
-                   extensions = c("")))
-cat(markdownToHTML(text = "#Not A Header\\nbecause there is no space between # and N",
-                   extensions = c("space_headers")))
+cat(markdownToHTML(text = "#A Header\\neven though there is no space between # and A", 
+    extensions = c("")))
+cat(markdownToHTML(text = "#Not A Header\\nbecause there is no space between # and N", 
+    extensions = c("space_headers")))
 
 # superscript example
 cat(markdownToHTML(text = "2^10", extensions = c()))
