@@ -1,3 +1,4 @@
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/renderMarkdown.R
 \name{markdownHTMLOptions}
 \alias{markdownHTMLOptions}
@@ -96,6 +97,7 @@ options(markdown.HTML.options = NULL)
 
 # To turn on package default HTML options globally:
 options(markdown.HTML.options = markdownHTMLOptions(default = TRUE))
+
 # HTML OPTIONS
 
 # The following examples are short, so we allways add the HTML option 'fragment_only'
@@ -119,8 +121,8 @@ cat(markdownToHTML(text = mkd, options = c(tOpt)))
 cat(markdownToHTML(text = mkd, options = c(tOpt, "skip_links")))
 
 # safelink example
-cat(markdownToHTML(text = '[foo](foo://bar "baz")', options = c(tOpt)))
-cat(markdownToHTML(text = '[foo](foo://bar "baz")', options = c(tOpt, "safelink")))
+cat(markdownToHTML(text = '[foo](http://google.com "baz")', options = c(tOpt)))
+cat(markdownToHTML(text = '[foo](http://google.com "baz")', options = c(tOpt, "safelink")))
 
 # toc example
 mkd <- paste(c("# Header 1", "p1", "## Header 2", "p2"), collapse = "\\n")
