@@ -1,3 +1,4 @@
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/renderMarkdown.R
 \name{rendererExists}
 \alias{rendererExists}
