@@ -1,3 +1,14 @@
+			      CHANGES IN markdown VERSION 0.8
+
+MINOR CHANGES
+
+   o the MathJax CDN URL was replaced by http://www.bootcdn.cn/mathjax/
+
+BUG FIXES
+
+   o fixed https://github.com/rstudio/htmltools/issues/30: markdownToHTML() did
+   not work with empty files (thanks, @VermillionAzure)
+
 			      CHANGES IN markdown VERSION 0.7.7
 
 BUG FIXES
